--- a/package.json
+++ b/package.json
@@ -28,18 +28,24 @@
     "url": "https://github.com/balovbohdan/react-intl-universal-defaults"
   },
   "peerDependencies": {
+    "intl-messageformat": "^9.12.0",
+    "react": "^16.8.0",
     "react-intl-universal": "^2.4.12"
   },
   "devDependencies": {
     "@commitlint/cli": "^16.2.3",
     "@commitlint/config-conventional": "^16.2.1",
     "@types/jest": "^27.4.1",
+    "@types/react": "^17.0.43",
     "@typescript-eslint/eslint-plugin": "^5.17.0",
     "@typescript-eslint/parser": "^5.17.0",
     "current-git-branch": "^1.1.0",
     "eslint": "^8.12.0",
     "husky": "^7.0.4",
+    "intl-messageformat": "^9.12.0",
     "jest": "^27.5.1",
+    "react": "^16.8.0",
+    "react-intl-universal": "^2.4.12",
     "ts-jest": "^27.1.4",
     "typescript": "^4.6.3"
   }
