--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-intl-universal-defaults",
-  "version": "2.1.1",
+  "version": "2.1.2",
   "description": "Tool for react-intl-universal that allows using default locale when selecting translation",
   "keywords": [
     "react",
@@ -13,7 +13,7 @@
     "test": "jest",
     "build": "tsc --build",
     "lint": "eslint src --cache --report-unused-disable-directives --ext .ts",
-    "postinstall": "husky install",
+    "postinstall": "cross-env bin/install-husky.sh",
     "prepublish": "npm run build"
   },
   "author": {
@@ -39,6 +39,7 @@
     "@types/react": "^17.0.43",
     "@typescript-eslint/eslint-plugin": "^5.17.0",
     "@typescript-eslint/parser": "^5.17.0",
+    "cross-env": "^7.0.3",
     "current-git-branch": "^1.1.0",
     "eslint": "^8.12.0",
     "husky": "^7.0.4",
