--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-intl-universal-defaults",
-  "version": "2.1.2",
+  "version": "2.1.3",
   "description": "Tool for react-intl-universal that allows using default locale when selecting translation",
   "keywords": [
     "react",
@@ -13,7 +13,7 @@
     "test": "jest",
     "build": "tsc --build",
     "lint": "eslint src --cache --report-unused-disable-directives --ext .ts",
-    "postinstall": "cross-env bin/install-husky.sh",
+    "prepare": "cross-env bin/install-husky.sh",
     "prepublish": "npm run build"
   },
   "author": {
